[gd_scene load_steps=26 format=3 uid="uid://b5npiekbsl1a3"]

[ext_resource type="Script" uid="uid://k4fhtwc2tv2p" path="res://scenes/Main/main.gd" id="1_px18m"]
[ext_resource type="Script" uid="uid://coat0elfombhf" path="res://scripts/Grid.gd" id="2_8gcrf"]
[ext_resource type="Texture2D" uid="uid://cta0jnlqov0by" path="res://art/dirt.png" id="2_8x5ba"]
[ext_resource type="PackedScene" uid="uid://clex7g5wcckku" path="res://scenes/Unit/unit.tscn" id="3_8gcrf"]
[ext_resource type="Texture2D" uid="uid://c75t58rn2nwb0" path="res://art/grass.png" id="3_3348s"]
[ext_resource type="Script" uid="uid://pdf1br8h35k8" path="res://scripts/Camera.gd" id="3_rdp1x"]
[ext_resource type="Texture2D" uid="uid://da38snvwt80rg" path="res://art/missing.png" id="4_f0cp1"]
[ext_resource type="Script" uid="uid://dwgr5oy54l7xb" path="res://scenes/Main/pathfinding.gd" id="4_rdp1x"]
[ext_resource type="Texture2D" uid="uid://cg5v0omgv2dwr" path="res://art/stonewall.png" id="5_qavmp"]
[ext_resource type="Texture2D" uid="uid://hi2l4ikeppdr" path="res://art/tree.png" id="6_yye4h"]
[ext_resource type="Texture2D" uid="uid://clg5xyqu770wx" path="res://art/woodwall.png" id="7_v04fw"]
[ext_resource type="Texture2D" uid="uid://6tqi42rod2su" path="res://art/wood.png" id="8_yye4h"]
[ext_resource type="Texture2D" uid="uid://cv2u8n3wuy7bs" path="res://art/items/stone.png" id="9_v04fw"]
[ext_resource type="Script" uid="uid://dgnapodiyl04i" path="res://scenes/Main/gui.gd" id="12_3348s"]
[ext_resource type="Script" uid="uid://bqj6a22gdrf43" path="res://scenes/Main/Construct.gd" id="13_f0cp1"]
[ext_resource type="Script" uid="uid://cdfhp30vrkny5" path="res://scenes/Main/rClickPanel.gd" id="14_qavmp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_52res"]
resource_name = "dirt"
texture = ExtResource("2_8x5ba")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0sc1r"]
resource_name = "grass"
texture = ExtResource("3_3348s")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f143f"]
resource_name = "missing"
texture = ExtResource("4_f0cp1")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mysde"]
resource_name = "stonewall"
texture = ExtResource("5_qavmp")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r08jt"]
resource_name = "tree"
texture = ExtResource("6_yye4h")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s0h5q"]
resource_name = "woodwall"
texture = ExtResource("7_v04fw")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v04fw"]
texture = ExtResource("8_yye4h")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2ep58"]
texture = ExtResource("9_v04fw")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_2ep58"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_52res")
sources/1 = SubResource("TileSetAtlasSource_0sc1r")
sources/2 = SubResource("TileSetAtlasSource_f143f")
sources/3 = SubResource("TileSetAtlasSource_mysde")
sources/4 = SubResource("TileSetAtlasSource_r08jt")
sources/5 = SubResource("TileSetAtlasSource_s0h5q")
sources/6 = SubResource("TileSetAtlasSource_v04fw")
sources/7 = SubResource("TileSetAtlasSource_2ep58")

[node name="Main" type="Node2D"]
script = ExtResource("1_px18m")

[node name="Grid" type="TileMap" parent="."]
tile_set = SubResource("TileSet_2ep58")
format = 2
layer_0/name = "floor"
layer_1/name = "building"
layer_1/z_index = 1
script = ExtResource("2_8gcrf")
show_debug = true

[node name="Debug" type="Node2D" parent="Grid"]

[node name="Units" type="Node2D" parent="Grid"]

[node name="Unit" parent="Grid/Units" instance=ExtResource("3_8gcrf")]

[node name="Pathfinding" type="Node" parent="Grid"]
script = ExtResource("4_rdp1x")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(175, 47)
script = ExtResource("3_rdp1x")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("12_3348s")

[node name="BaseButtons" type="Control" parent="CanvasLayer/GUI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/BaseButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 15.4
anchor_right = 8.025
anchor_bottom = 16.175
offset_right = 306.0
mouse_filter = 0
metadata/_edit_use_anchors_ = true

[node name="Build" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Build
"

[node name="Construct" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Construct"

[node name="Designate" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Designate"

[node name="Tasks" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tasks"

[node name="Bio" type="Button" parent="CanvasLayer/GUI/BaseButtons/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Bio"

[node name="ConstructButtons" type="Control" parent="CanvasLayer/GUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("13_f0cp1")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/ConstructButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 15.4
anchor_right = 8.025
anchor_bottom = 16.175
offset_right = 181.0
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="CanvasLayer/GUI/ConstructButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="Walls" type="Button" parent="CanvasLayer/GUI/ConstructButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Walls
"

[node name="WoodWall" type="Button" parent="CanvasLayer/GUI/ConstructButtons/HBoxContainer/Walls"]
visible = false
layout_mode = 0
offset_right = 91.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Wood Wall"
icon = ExtResource("7_v04fw")
expand_icon = true

[node name="StoneWall" type="Button" parent="CanvasLayer/GUI/ConstructButtons/HBoxContainer/Walls"]
visible = false
layout_mode = 0
offset_right = 90.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Stone Wall"
icon = ExtResource("5_qavmp")
expand_icon = true

[node name="DirtFloor" type="Button" parent="CanvasLayer/GUI/ConstructButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tree"
icon = ExtResource("6_yye4h")
expand_icon = true

[node name="TaskButtons" type="Control" parent="CanvasLayer/GUI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/TaskButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 15.4
anchor_right = 8.025
anchor_bottom = 16.175
offset_right = 181.0
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="CanvasLayer/GUI/TaskButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="Chop" type="Button" parent="CanvasLayer/GUI/TaskButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chop"
icon = ExtResource("7_v04fw")
expand_icon = true

[node name="Mine" type="Button" parent="CanvasLayer/GUI/TaskButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mine"
icon = ExtResource("5_qavmp")
expand_icon = true

[node name="Cut" type="Button" parent="CanvasLayer/GUI/TaskButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cut
"
icon = ExtResource("2_8x5ba")
expand_icon = true

[node name="InfoPanel" type="Control" parent="CanvasLayer/GUI"]
anchors_preset = 0
offset_top = 404.0
offset_right = 40.0
offset_bottom = 444.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GUI/InfoPanel"]
layout_mode = 0
offset_top = 74.0
offset_right = 315.0
offset_bottom = 200.0
mouse_filter = 1
color = Color(0.24705882, 0.24705882, 0.24705882, 0.6862745)

[node name="Name" type="Label" parent="CanvasLayer/GUI/InfoPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 76.0
offset_right = 42.0
offset_bottom = 99.0

[node name="RClickPanel" type="Control" parent="CanvasLayer/GUI"]
anchors_preset = 0
offset_right = 125.0
offset_bottom = 63.0
script = ExtResource("14_qavmp")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/RClickPanel"]
layout_mode = 0
offset_right = 125.0
offset_bottom = 69.0

[node name="Move" type="Button" parent="CanvasLayer/GUI/RClickPanel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Move"

[node name="Chop" type="Button" parent="CanvasLayer/GUI/RClickPanel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Chop
"

[node name="Mine" type="Button" parent="CanvasLayer/GUI/RClickPanel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Mine"

[node name="Harvest" type="Button" parent="CanvasLayer/GUI/RClickPanel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Harvest"

[node name="Haul" type="Button" parent="CanvasLayer/GUI/RClickPanel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Haul"

[connection signal="pressed" from="CanvasLayer/GUI/BaseButtons/HBoxContainer/Construct" to="CanvasLayer/GUI" method="_on_construct_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/BaseButtons/HBoxContainer/Tasks" to="CanvasLayer/GUI" method="_on_tasks_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/ConstructButtons/HBoxContainer/Back" to="CanvasLayer/GUI" method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/ConstructButtons/HBoxContainer/Back" to="CanvasLayer/GUI/ConstructButtons" method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/ConstructButtons/HBoxContainer/Walls/WoodWall" to="CanvasLayer/GUI/ConstructButtons" method="_on_wood_wall_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/ConstructButtons/HBoxContainer/Walls/StoneWall" to="CanvasLayer/GUI/ConstructButtons" method="_on_stone_wall_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/ConstructButtons/HBoxContainer/DirtFloor" to="CanvasLayer/GUI/ConstructButtons" method="_on_dirt_floor_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/TaskButtons/HBoxContainer/Back" to="CanvasLayer/GUI" method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/RClickPanel/VBoxContainer/Move" to="CanvasLayer/GUI" method="_on_move_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/RClickPanel/VBoxContainer/Chop" to="CanvasLayer/GUI" method="_on_chop_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/RClickPanel/VBoxContainer/Mine" to="CanvasLayer/GUI" method="_on_mine_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/RClickPanel/VBoxContainer/Harvest" to="CanvasLayer/GUI" method="_on_harvest_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/RClickPanel/VBoxContainer/Haul" to="CanvasLayer/GUI" method="_on_haul_pressed"]
